Java SDK - Core integration